# FakeLock

./: .gitignore  .tsbuildinfo  Features.md  README.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  monitor.rs  settings.rs
src-tauri/tests/: password_test.rs
