[package]
name = "fakelock-ts"
version = "2.0.0"
description = "Modern system lock screen for Windows"
authors = ["FakeLock Team"]
edition = "2021"

[lib]
name = "fakelock_ts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winapi = { version = "0.3", features = ["winuser", "shellapi", "hidpi"] }
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
urlencoding = "2"
regex = "1"
thiserror = "2"
subtle = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Power",
    "Win32_Graphics_Gdi"
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
fakelock-ts = { path = ".", package = "fakelock-ts" }
